<resources>
    <string name="app_name">XProjectBeta</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_with_email">Register with email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_as_a_client">Sign Up as a Client</string>
    <string name="sign_up_as_a_transporter">Sign Up as a Transporter</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google_account">login with google account</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">phone</string>
    <string name="front_national_id">Front National ID</string>
    <string name="back_national_id">Back National ID</string>
    <string name="add_your_national_id_photo">Add Your National ID Photo</string>
    <string name="add_your_driver_license_photo">Add Your Driver License Photo</string>
    <string name="front_driver_license">Front Driver License</string>
    <string name="back_driver_license">Back Driver License</string>
    <string name="add_vehicle_license_photo">Add Vehicle License Photo</string>
    <string name="front_vehicle_license">Front Vehicle License</string>
    <string name="back_vehicle_license">Back Vehicle License</string>
</resources>