<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:context=".view.ui.login.RegisterFragment">

        <EditText
            android:id="@+id/EmailET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/register_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/styletext"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/passwordConfirm"
            android:layout_marginBottom="25dp"
            android:background="@drawable/styletext"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/passwordConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailET" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/signUpBtn"
            android:layout_marginBottom="25dp"
            android:background="@drawable/styletext"
            android:hint="@string/confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="@drawable/stylebutton3"
            android:text="@string/sign_up_as_a_client"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm" />

        <Button
            android:id="@+id/signUpTransporterBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:background="@drawable/stylebutton3"
            android:text="@string/sign_up_as_a_transporter"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

        <Button
            android:id="@+id/btnlogface"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/stylebuttonf"
            android:drawableStart="@drawable/f"
            android:paddingStart="10dp"
            android:text="@string/login_with_facebook"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpTransporterBtn" />

        <Button
            android:id="@+id/btnloggoogle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/stylebuttong"
            android:drawableStart="@drawable/g"
            android:paddingStart="10dp"
            android:text="@string/login_with_google_account"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlogface" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>